css change to stop profile links from overflowing channel pane bounds

--- a/src/app/modules/channels/v2/social-links/social-links.component.scss
+++ b/src/app/modules/channels/v2/social-links/social-links.component.scss
@@ -3,6 +3,9 @@ m-channel__socialLinks {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
+  overflow: hidden;
+  max-height: 100px;
 
   > * + * {
     margin-left: 8px;
